src/styles/FileInput.module.css
.button {
  display: block;
  position: relative;
  border: none;
  outline: none;
  background: var(--theme-inner-background);
  color: var(--theme-label-foreground);
  padding: 0.3rem 0.5rem;
  font-family: inherit;
  font-size: 11pt;
  transition: all 0.1s;
  cursor: pointer;
  width: 15rem;
  overflow-x: hidden;
  text-align: unset;
}

.button::after {
  position: absolute;
  content: "";
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  border-radius: var(--round-default);
  box-shadow: inset 0 0 0 0.1rem var(--theme-outline);
}

.selected {
  color: var(--theme-foreground);
  font-family: var(--font-monospace);
  direction: rtl;
}

.selected:after {
  box-shadow:
    inset 0 0 0 0.1rem var(--theme-outline),
    inset 1.5rem 0 0.5rem -1rem var(--theme-inner-background);
}

